I'm doing  Rodape,  test for smartphone

--- a/index.html
+++ b/index.html
@@ -75,10 +75,12 @@
 
     <footer>
         <nav>
-            <a href="#"><li> Explorar</li></a>
-            <a href=""><li>Favoritos</li></a>
-            <a href=""><li>Mapa</li></a>
-            <a href=""><li>Minha Conta</li></a>
+            <ul>
+            <li><a href="#"><img src="imagens/down menu/Explorar.jpg" alt=""></a></li>
+            <li><a href="#"><img src="imagens/down menu/Favoritos.jpg" alt=""></a></li>
+            <li><a href="#"><img src="imagens/down menu/Mapa.jpg" alt=""></a></li>
+            <li><a href="#"><img src="imagens/down menu/Minha conta.jpg" alt=""></a></li>
+            </ul>
         </nav>
     </footer>
 
