--- a/index.html
+++ b/index.html
@@ -22,16 +22,50 @@
         </div>
         <div id="container">
             <div class="my-slider">
-            <div><a href="#"><img src="imagens/header/pre-filters/Banheira.png" alt=""></a></div>
-            <div><a href="#"><img src="imagens/header/pre-filters/Garagem.png" alt=""></a></div>
-            <div><a href="#"><img src="imagens/header/pre-filters/Secador de cabelo.png" alt=""></a></div>
-            <div><a href="#"><img src="imagens/header/pre-filters/Sauna.png" alt=""></a></div>
-            <div><a href="#"><img src="imagens/header/pre-filters/Bar.png" alt=""></a></div>
-            <div><a href="#"><img src="imagens/header/pre-filters/Piscina.png" alt=""></a></div>
-            <div><a href="#"><img src="imagens/header/pre-filters/TV.png" alt=""></a></div>
-            <div><a href="#"><img src="imagens/header/pre-filters/Jardim.png" alt=""></a></div>
+
+            <div>
+                <a href="#">
+                <img src="imagens/header/pre-filters/banheira.png" alt="">
+                <p>Banheira</p>
+            </a></div>
+            <div>
+                <a href="#">
+                    <img src="imagens/header/pre-filters/garage.png" alt="">
+                    <p>Garagem</p>
+                </a></div>
+            <div>
+                <a href="#">
+                    <img src="imagens/header/pre-filters/secador-cabelo.png" alt="">
+                    <p>Secador</p>
+                </a></div>
+            <div>
+                <a href="#">
+                    <img src="imagens/header/pre-filters/spa.png" alt="">
+                    <p>Sauna</p>
+                </a></div>
+            <div>
+                <a href="#"><img src="imagens/header/pre-filters/tropical-drink.png" alt="">
+                    <p>Bar</p>
+                </a></div>
+            <div>
+                <a href="#">
+                    <img src="imagens/header/pre-filters/swimming.png" alt="">
+                    <p>Piscina</p>
+                </a></div>
+            <div>
+                <a href="#"><img src="imagens/header/pre-filters/tv.png" alt="">
+                    <p>TV</p> 
+                </a></div>
+            <div>
+                <a href="#">
+                    <img src="imagens/header/pre-filters/flower.png" alt="">
+                    <p>Jardin</p>
+                </a></div>
             </div>
+
         </div>
+             <picture class="arrow-left"><img src="imagens/header/arrow/left.png" alt=""></picture>
+            <picture class="arrow-right"><img src="imagens/header/arrow/right.png" alt=""></picture>
     </header>
 
     <main>
