--- a/index.html
+++ b/index.html
@@ -110,10 +110,22 @@
     <footer>
         <nav>
             <ul>
-            <li class="explore"><a href="#"><img src="imagens/down menu/Explorar.png" alt=""></a></li>
-            <li class="favorites"><a href="#"><img src="imagens/down menu/Favoritos.png" alt=""></a></li>
-            <li class="map"><a href="#"><img src="imagens/down menu/Mapa.png" alt=""></a></li>
-            <li class="my-account"><a href="#"><img src="imagens/down menu/Minha conta.png" alt=""></a></li>
+            <li class="explore">
+                <a href="#"><img src="imagens/down menu/explorer.png" alt="">
+                <p>Explorar</p>
+             </a></li>
+            <li class="favorites">
+                <a href="#"><img src="imagens/down menu/heart.png" alt="">
+                <p>Favoritos</p>
+                </a></li>
+            <li class="map">
+                <a href="#"><img src="imagens/down menu/map.png" alt="">
+                <p>Mapa</p>
+                </a></li>
+            <li class="my-account">
+                <a href="#"><img src="imagens/down menu/avatar.png" alt="">
+                <p>Minha Conta</p>
+                </a></li>
             </ul>
         </nav>
     </footer>
