Started 'page motel and favorites'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style.css" media="all">
     <!--  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/tiny-slider.min.css">  -->
     <script src="javascript.js"></script>
 
@@ -16,9 +16,9 @@
 <body>
     <header>
         <div id="search">
-            <img src="imagens/header/search/🦆 icon _search outline_.png" alt="search">  
+            <img src="imagens/header/search/search.png" alt="search">  
             <input type="text" id="search boxes" placeholder="Em que lugar?"> 
-            <a href="#"><div><img src="imagens/header/search/🦆 icon _filter_.png" alt="filter"></div></a>
+            <a href="#"><div><img src="imagens/header/search/filter.png" alt="filter"></div></a>
         </div>
         <div id="container">
             <div class="my-slider">
