Create style for 'motel-page and page-favorites'alter changed the HTML in motel-page added the ul for the list

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="style/style.css" media="all">
     <!--  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/tiny-slider.min.css">  -->
     <script src="javascript.js"></script>
-
-
     <title>Motel Guide</title>
 
 </head>
@@ -16,56 +14,56 @@
 <body>
     <header>
         <div id="search">
-            <img src="imagens/header/search/search.png" alt="search">  
+            <img src="imagens/page-started/header/search/search.png" alt="search">  
             <input type="text" id="search boxes" placeholder="Em que lugar?"> 
-            <a href="#"><div><img src="imagens/header/search/filter.png" alt="filter"></div></a>
+            <a href="#"><div><img src="imagens/page-started/header/search/filter.png" alt="filter"></div></a>
         </div>
         <div id="container">
             <div class="my-slider">
 
             <div>
                 <a href="#">
-                <picture><img src="imagens/header/pre-filters/banheira.png" alt=""></picture>
+                <picture><img src="imagens/page-started/header/pre-filters/banheira.png" alt=""></picture>
                 <p>Banheira</p>
             </a></div>
             <div>
                 <a href="#">
-                    <img src="imagens/header/pre-filters/garage.png" alt="">
+                    <img src="imagens/page-started/header/pre-filters/garage.png" alt="">
                     <p>Garagem</p>
                 </a></div>
             <div>
                 <a href="#">
-                    <img src="imagens/header/pre-filters/secador-cabelo.png" alt="">
+                    <img src="imagens/page-started/header/pre-filters/secador-cabelo.png" alt="">
                     <p>Secador</p>
                 </a></div>
             <div>
                 <a href="#">
-                    <img src="imagens/header/pre-filters/spa.png" alt="">
+                    <img src="imagens/page-started/header/pre-filters/spa.png" alt="">
                     <p>Sauna</p>
                 </a></div>
             <div>
-                <a href="#"><img src="imagens/header/pre-filters/tropical-drink.png" alt="">
+                <a href="#"><img src="imagens/page-started/header/pre-filters/tropical-drink.png" alt="">
                     <p>Bar</p>
                 </a></div>
             <div>
                 <a href="#">
-                    <img src="imagens/header/pre-filters/swimming.png" alt="">
+                    <img src="imagens/page-started/header/pre-filters/swimming.png" alt="">
                     <p>Piscina</p>
                 </a></div>
             <div>
-                <a href="#"><img src="imagens/header/pre-filters/tv.png" alt="">
+                <a href="#"><img src="imagens/page-started/header/pre-filters/tv.png" alt="">
                     <p>TV</p> 
                 </a></div>
             <div>
                 <a href="#">
-                    <img src="imagens/header/pre-filters/flower.png" alt="">
+                    <img src="imagens/page-started/header/pre-filters/flower.png" alt="">
                     <p>Jardin</p>
                 </a></div>
             </div>
 
         </div>
-             <picture class="arrow-left"><img src="imagens/header/arrow/left.png" alt=""></picture>
-            <picture class="arrow-right"><img src="imagens/header/arrow/right.png" alt=""></picture>
+             <picture class="arrow-left"><img src="imagens/page-started/header/arrow/left.png" alt=""></picture>
+            <picture class="arrow-right"><img src="imagens/page-started/header/arrow/right.png" alt=""></picture>
     </header>
 
     <main>
@@ -79,8 +77,8 @@
             </div>
 
             <div class="view-suit">
-                <a href="#"> 
-                    <picture><img src="imagens/motel/arrow-right.png" alt="arrow"></picture>
+                <a href="motel-page.html"> 
+                    <picture><img src="imagens/page-started/motel/arrow-right.png" alt="arrow"></picture>
                     <p> Ver Suites</p>
                </a>
             </div>
@@ -96,8 +94,8 @@
             </div>
 
             <div class="view-suit">
-                <a href="#">
-                <picture><img src="imagens/motel/arrow-right.png" alt="arrow"></picture>
+                <a href="motel-page.html">
+                <picture><img src="imagens/page-started/motel/arrow-right.png" alt="arrow"></picture>
                     <p> Ver Suites</p>
                 </a>
             </div>
@@ -111,19 +109,19 @@
         <nav>
             <ul>
             <li class="explore">
-                <a href="#"><img src="imagens/down menu/explorer.png" alt="">
+                <a href="#"><img src="imagens/page-started/down menu/explorer.png" alt="">
                 <p>Explorar</p>
              </a></li>
             <li class="favorites">
-                <a href="#"><img src="imagens/down menu/heart.png" alt="">
+                <a href="my-favorites.html"><img src="imagens/page-started/down menu/heart.png" alt="">
                 <p>Favoritos</p>
                 </a></li>
             <li class="map">
-                <a href="#"><img class="map" src="imagens/down menu/map.png" alt="">
+                <a href="#"><img class="map" src="imagens/page-started/down menu/map.png" alt="">
                 <p>Mapa</p>
                 </a></li>
             <li class="my-account">
-                <a href="#"><img  src="imagens/down menu/avatar.png" alt="">
+                <a href="#"><img  src="imagens/page-started/down menu/avatar.png" alt="">
                 <p>Minha Conta</p>
                 </a></li>
             </ul>
