--- a/my-favorites.html
+++ b/my-favorites.html
@@ -3,14 +3,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-page-favorites.css">
     <link rel="stylesheet" href="style/style.css" media="all">
+    <link rel="stylesheet" href="style/style-page-favorites.css">
     <title>My Favorites</title>
-</head>
-<body>
 
+</head>
+
+<body>
+    <header>
+
+    <h1>Meus Favoritos</h1>
+
+</header>
     <main>
-        <h1>Meus Favoritos</h1>
         <section>
             <picture><img src="#" alt="#">
             </picture>
@@ -22,7 +27,7 @@
 
             <div class="view-suit">
                 <a href="#"> 
-                    <picture><img src="imagens/motel/arrow-right.png" alt="arrow"></picture>
+                    <picture><img src="imagens/page-started/motel/arrow-right.png" alt="arrow"></picture>
                     <p> Ver Suites</p>
                </a>
             </div>
@@ -39,7 +44,7 @@
 
             <div class="view-suit">
                 <a href="#">
-                <picture><img src="imagens/motel/arrow-right.png" alt="arrow"></picture>
+                <picture><img src="imagens/page-started/motel/arrow-right.png" alt="arrow"></picture>
                     <p> Ver Suites</p>
                 </a>
             </div>
@@ -53,19 +58,19 @@
         <nav>
             <ul>
             <li class="explore">
-                <a href="#"><img src="imagens/down menu/page-favorites/Globe.png" alt="">
+                <a href="index.html"><img src="imagens/page-started/down menu/page-favorites/Globe.png" alt="">
                 <p>Explorar</p>
              </a></li>
             <li class="favorites">
-                <a href="#"><img src="imagens/down menu/heart.png" alt="">
+                <a href="#"><img src="imagens/page-started/down menu/heart.png" alt="">
                 <p>Favoritos</p>
                 </a></li>
             <li class="map">
-                <a href="#"><img class="map" src="imagens/down menu/page-favorites/map.png" alt="">
+                <a href="#"><img class="map" src="imagens/page-started/down menu/page-favorites/map.png" alt="">
                 <p>Mapa</p>
                 </a></li>
             <li class="my-account">
-                <a href="#"><img  src="imagens/down menu/page-favorites/avatar.png" alt="">
+                <a href="#"><img  src="imagens/page-started/down menu/page-favorites/avatar.png" alt="">
                 <p>Minha Conta</p>
                 </a></li>
             </ul>
