--- a/motel-page.html
+++ b/motel-page.html
@@ -1,50 +1,77 @@
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css" media="all">
+    <link rel="stylesheet" href="style/style-motel-page.css">
     <title>Motel Page</title>
 </head>
+
 <body>
+    <main>
 
-    <section>
-        <img src="#" alt="seta para esquerda">
-        <picture><img src="#" alt=""></picture>
-        <div>
-            <picture><img src="#" alt="logo motel"></picture>
+    <section class="main-information">
+
+        <img src="imagens/page-motel/arrow-circle-left.png" alt="seta para esquerda">
+        <picture class="photo-motel"><img src="#" alt="imagem principal"></picture>
+
+        <div class="information-motel">
+
+            <div class="motel-logo">
+                <picture>
+                    <img src="#" alt="logo motel">
+                </picture>
+            </div>
+
             <h1>Nome do Motel</h1>
-            <p>Endereço</p>
-            <div>
-                <img src="#" alt="favoritos">
-                <img src="#" alt="telefone">
-                <img src="#" alt="localidade">
+
+            <p>Rua exemplo, 000 - Bairro X - Cidade Y - Distrito Z</p>
+
+            <div class="images">
+                <img src="imagens/page-motel/heart.png" alt="favoritos">
+                <img src="imagens/page-motel/phone.png" alt="telefone">
+                <img class="map" src="imagens/page-motel/map.png" alt="localidade">
             </div>
         </div>
     </section>
+
     <p>Conheça nossas suítes e escolha a que desejar!</p>
-    <section>
+
+    <section class="details-suit">
         <picture><img src="#" alt="foto da suite"></picture>
-        <div>
+
+        <div class="information-suit">
+
             <h1>Nome Suíte</h1>
-            <h2>Comodidades</h2>
-            <p>Comodidades</p>
-        </div>
-        <div>
-            <h2>Valores Hoje</h2>
-            <div>
-                <p>02 Horas</p>
-                <p>02 Horas</p>
-                <p>02 Horas</p>
-            </div>
-            <div>
-                <p>R$00,00</p>
-                <p>R$00,00</p>
-                <p>R$00,00</p>
+
+            <div class="amenities-suit">
+                <h2>Comodidades</h2>
+                <ul>
+                    <li><p>Comodidades 1</p></li>
+                    <li><p>Comodidades 2</p></li>
+                    <li><p>Comodidades 3</p></li>
+                    <li><p>Comodidades 4</p></li>
+                    <li><p>Comodidades 5</p></li>
+                    <li><p>Comodidades 6</p></li>   
+                </ul>  
             </div>
 
-
+             <div class="prices-and-time">
+                <h2>Valores Hoje</h2>
+                <div  class="time-suit">
+                    <p>02 Horas</p>
+                    <p>04 Horas</p>
+                    <p>Pernoite</p>
+                </div>
+                <div class="price-suit">
+                    <p>R$ 00,00</p>
+                    <p>R$ 00,00</p>
+                    <p>R$ 00,00</p>
+                </div>
+            </div>
         </div>
     </section>
-    
+    </main>
 </body>
 </html>
