--- a/my-favorites.html
+++ b/my-favorites.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="view-suit">
-                <a href="#"> 
+                <a href="motel-page.html"> 
                     <picture><img src="imagens/page-started/motel/arrow-right.png" alt="arrow"></picture>
                     <p> Ver Suites</p>
                </a>
@@ -43,7 +43,7 @@
             </div>
 
             <div class="view-suit">
-                <a href="#">
+                <a href="motel-page.html">
                 <picture><img src="imagens/page-started/motel/arrow-right.png" alt="arrow"></picture>
                     <p> Ver Suites</p>
                 </a>
@@ -58,7 +58,7 @@
         <nav>
             <ul>
             <li class="explore">
-                <a href="index.html"><img src="imagens/page-started/down menu/page-favorites/Globe.png" alt="">
+                <a href="main-page.html"><img src="imagens/page-started/down menu/page-favorites/Globe.png" alt="">
                 <p>Explorar</p>
              </a></li>
             <li class="favorites">
