--- a/index.html
+++ b/index.html
@@ -109,19 +109,19 @@
         <nav>
             <ul>
             <li class="explore">
-                <a href="#"><img src="imagens/page-started/down menu/explorer.png" alt="">
+                <a href="index.html"><img src="imagens/down-menu/explorer-black.png" alt="">
                 <p>Explorar</p>
              </a></li>
             <li class="favorites">
-                <a href="my-favorites.html"><img src="imagens/page-started/down menu/heart.png" alt="">
+                <a href="my-favorites.html"><img src="imagens/down-menu/heart-black.png" alt="">
                 <p>Favoritos</p>
                 </a></li>
             <li class="map">
-                <a href="#"><img class="map" src="imagens/page-started/down menu/map.png" alt="">
+                <a href="map.html"><img class="map" src="imagens/down-menu/map-black.png" alt="">
                 <p>Mapa</p>
                 </a></li>
             <li class="my-account">
-                <a href="#"><img  src="imagens/page-started/down menu/avatar.png" alt="">
+                <a href="#"><img  src="imagens/down-menu/avatar-black.png" alt="">
                 <p>Minha Conta</p>
                 </a></li>
             </ul>
