--- a/map.html
+++ b/map.html
@@ -3,31 +3,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css" media="all">
+    <link rel="stylesheet" href="style/style-page-map.css">
     <title>Page Map</title>
 </head>
 <body>
 
+    <header>
 
+        <h1>Ver opções no mapa</h1>
+    
+    </header>
 
+    <main>
 
+        <section>
 
+        </section>
+    </main>    
     <footer>
         <nav>
             <ul>
             <li class="explore">
-                <a href="main-page.html"><img src="imagens/page-started/down menu/page-favorites/Globe.png" alt="">
+                <a href="index.html"><img src="imagens/down-menu/Globe-gray.png" alt="">
                 <p>Explorar</p>
              </a></li>
             <li class="favorites">
-                <a href="#"><img src="imagens/page-started/down menu/heart.png" alt="">
+                <a href="my-favorites.html"><img src="imagens/down-menu/heart-gray.png" alt="">
                 <p>Favoritos</p>
                 </a></li>
             <li class="map">
-                <a href="#"><img class="map" src="imagens/page-started/down menu/page-favorites/map.png" alt="">
+                <a href="#"><img class="map" src="imagens/down-menu/map-black.png" alt="">
                 <p>Mapa</p>
                 </a></li>
             <li class="my-account">
-                <a href="#"><img  src="imagens/page-started/down menu/page-favorites/avatar.png" alt="">
+                <a href="#"><img  src="imagens/down-menu/avatar-gray.png" alt="">
                 <p>Minha Conta</p>
                 </a></li>
             </ul>
