--- a/my-favorites.html
+++ b/my-favorites.html
@@ -58,19 +58,19 @@
         <nav>
             <ul>
             <li class="explore">
-                <a href="main-page.html"><img src="imagens/page-started/down menu/page-favorites/Globe.png" alt="">
+                <a href="index.html"><img src="imagens/down-menu/Globe-gray.png" alt="">
                 <p>Explorar</p>
              </a></li>
             <li class="favorites">
-                <a href="#"><img src="imagens/page-started/down menu/heart.png" alt="">
+                <a href="#"><img src="imagens/down-menu/heart-black.png" alt="">
                 <p>Favoritos</p>
                 </a></li>
             <li class="map">
-                <a href="#"><img class="map" src="imagens/page-started/down menu/page-favorites/map.png" alt="">
+                <a href="map.html"><img class="map" src="imagens/down-menu/map-gray.png" alt="">
                 <p>Mapa</p>
                 </a></li>
             <li class="my-account">
-                <a href="#"><img  src="imagens/page-started/down menu/page-favorites/avatar.png" alt="">
+                <a href="#"><img  src="imagens/down-menu/avatar-gray.png" alt="">
                 <p>Minha Conta</p>
                 </a></li>
             </ul>
