--- a/map.html
+++ b/map.html
@@ -41,7 +41,7 @@
                 <p>Mapa</p>
                 </a></li>
             <li class="my-account">
-                <a href="#"><img  src="imagens/down-menu/avatar-gray.png" alt="">
+                <a href="my account.html"><img  src="imagens/down-menu/avatar-gray.png" alt="">
                 <p>Minha Conta</p>
                 </a></li>
             </ul>
