create login screen

--- a/my account.html
+++ b/my account.html
@@ -1,16 +1,37 @@
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css" media="all">
+    <link rel="stylesheet" href="style/style-my-account.css">
     <title>My Account</title>
 </head>
+
 <body>
-    
-</body>
-</html>
 
+    <main>
+        <section>
+            <h1>Fazer Login</h1>
 
+            <form action="#" method="post">
+               <div>
+                    <input type="text" name="user" id="user" placeholder="E-mail ou usuário" required>
+               </div> 
+               <div>
+                    <input type="password" name="password" id="password" placeholder="Senha" required>
+                </div>
+                <div class="enter">
+                    <input type="submit" value="Entrar" id="enter"> 
+                </div>
+
+                <a href="#"><p>Esqueci minha senha</p></a>
+
+                <p>Ainda não é cadastrado? <a href="#">Cadastre-se</a></p>
+            </form>
+
+        </section>
+    </main>
 <footer>
     <nav>
         <ul>
@@ -33,3 +54,6 @@
         </ul>
     </nav>
 </footer>
+
+</body>
+</html>
