--- a/my account.html
+++ b/my account.html
@@ -15,19 +15,14 @@
             <h1>Fazer Login</h1>
 
             <form action="#" method="post">
-               <div>
-                    <input type="text" name="user" id="user" placeholder="E-mail ou usuário" required>
-               </div> 
-               <div>
-                    <input type="password" name="password" id="password" placeholder="Senha" required>
-                </div>
-                <div class="enter">
-                    <input type="submit" value="Entrar" id="enter"> 
-                </div>
-
+               
+                <input type="text" name="user" id="user" placeholder="E-mail ou usuário" required>
+                <input type="password" name="password" id="password" placeholder="Senha" required>
+                <input type="submit" value="Entrar" id="enter"> 
                 <a href="#"><p>Esqueci minha senha</p></a>
 
-                <p>Ainda não é cadastrado? <a href="#">Cadastre-se</a></p>
+                <p>Ainda não é cadastrado? <a href="registration.html">Cadastre-se</a></p>
+                
             </form>
 
         </section>
